Changed to multiple tooboxes per robot type.

--- a/Clients/Angular/src/app/components/robot-type-editor/robot-type-editor.component.html
+++ b/Clients/Angular/src/app/components/robot-type-editor/robot-type-editor.component.html
@@ -9,6 +9,7 @@
         </button>
     </div>
     <mat-card>
+        <mat-card-title>Details</mat-card-title>
         <mat-card-content>
             <mat-form-field class="fill-width">
                 <mat-label>Robot Type Name</mat-label>
@@ -27,6 +28,16 @@
                     <li *ngFor="let error of errors">{{error}}</li>
                 </ul>
             </mat-error>
+        </mat-card-content>
+    </mat-card>
+    <mat-card style="margin-top: 1rem;" *ngIf="!item?.isNew">
+        <mat-card-title>Toolboxes</mat-card-title>
+        <mat-card-content>
+            <mat-selection-list [multiple]="false">
+                <mat-list-option *ngFor="let toolbox of toolboxes" [value]="toolbox">
+                  {{toolbox.name}}
+                </mat-list-option>
+              </mat-selection-list>
         </mat-card-content>
     </mat-card>
 </form>
