--- a/Clients/Angular/src/app/components/toolbox-list/toolbox-list.component.html
+++ b/Clients/Angular/src/app/components/toolbox-list/toolbox-list.component.html
@@ -6,8 +6,9 @@
                     <div>
                     </div>
                     <div>
-                        <button mat-raised-button color="accent" class="command-button" (click)="add()">Add Robot
-                            Type</button>
+                        <button mat-raised-button color="accent" class="command-button" (click)="doClose()">
+                            <mat-icon>arrow_back</mat-icon> Back
+                        </button>
                     </div>
                 </div>
             </div>
@@ -16,12 +17,7 @@
                     <div>
                     </div>
                     <div>
-                        <button mat-raised-button color="accent" class="command-button" [matMenuTriggerFor]="importMenu">
-                            Import <mat-icon>arrow_drop_down</mat-icon>
-                        </button>
-                        <mat-menu #importMenu="matMenu">
-                            <button mat-menu-item (click)="importPackage()">Package</button>
-                        </mat-menu>
+                        <button mat-raised-button color="accent" class="command-button" (click)="add()">Add Toolbox</button>
                     </div>
                 </div>
             </div>
@@ -31,25 +27,9 @@
                 </div>
                 <div>
                     <button mat-raised-button class="command-button" [disabled]="selection.selected.length != 1"
-                        [matMenuTriggerFor]="viewMenu">
-                        View
-                        <mat-icon>arrow_drop_down</mat-icon>
-                    </button>
-                    <mat-menu #viewMenu="matMenu">
-                        <button mat-menu-item (click)="viewToolboxes()">Toolboxes</button>
-                    </mat-menu>
-                    <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()"
                         (click)="edit()">Edit</button>
                     <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()"
                         (click)="delete()">Delete</button>
-                    <button mat-raised-button class="command-button" [disabled]="selection.selected.length != 1"
-                        [matMenuTriggerFor]="setMenu">
-                        Set
-                        <mat-icon>arrow_drop_down</mat-icon>
-                    </button>
-                    <mat-menu #setMenu="matMenu">
-                        <button mat-menu-item (click)="setSystemDefault()">System Default</button>
-                    </mat-menu>
                     <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()"
                         [matMenuTriggerFor]="exportMenu">
                         Export
@@ -58,17 +38,10 @@
                     <mat-menu #exportMenu="matMenu">
                         <button mat-menu-item>List</button>
                         <button mat-menu-item [disabled]="selection.selected.length != 1">Details</button>
-                        <button mat-menu-item [disabled]="selection.selected.length != 1">Logs</button>
-                        <button mat-menu-item [disabled]="selection.selected.length != 1">Snapshots</button>
                     </mat-menu>
                 </div>
             </div>
         </div>
-
-        <mat-error class="missing-default" *ngIf="!hasSystemDefault">
-            <mat-icon>warning</mat-icon>
-            There is no system default robot type.
-        </mat-error>
 
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-list">
 
@@ -78,7 +51,7 @@
             </ng-container>
             <ng-container matColumnDef="isDefault">
                 <th mat-header-cell *matHeaderCellDef> Default </th>
-                <td mat-cell *matCellDef="let record"> {{record.isDefault ? 'System' : ''}} </td>
+                <td mat-cell *matCellDef="let record"> {{record.isDefault ? 'Yes' : ''}} </td>
             </ng-container>
             <ng-container matColumnDef="toolbox">
                 <th mat-header-cell *matHeaderCellDef> Toolbox </th>
@@ -103,9 +76,6 @@
         </table>
     </div>
     <div *ngSwitchCase="'editor'">
-        <app-robot-type-editor [item]="currentItem" (closed)="onClosed($event)"></app-robot-type-editor>
-    </div>
-    <div *ngSwitchCase="'toolboxes'">
-        <app-toolbox-list [item]="currentItem" (closed)="onClosed($event)"></app-toolbox-list>
+        <app-toolbox-editor [item]="currentItem" [robotType]="item" (closed)="onClosed($event)"></app-toolbox-editor>
     </div>
 </div>
