--- a/Clients/Angular/src/app/components/logs-list/logs-list.component.scss
+++ b/Clients/Angular/src/app/components/logs-list/logs-list.component.scss
@@ -36,3 +36,12 @@
 .left {
     text-align: left;
 }
+
+.log-selected {
+    font-weight: bold;
+    background-color: #ccc;
+}
+
+.space-right {
+    margin-right: 1rem;
+}
