--- a/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
+++ b/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
@@ -19,16 +19,13 @@
             <a mat-list-item href="#" (click)="changeView($event, 'Robot Types')">
                 <mat-icon aria-label="Robot types" class="menu-icon">dns</mat-icon> Robot Types
             </a>
-            <a mat-list-item href="#" (click)="changeView($event, 'Students')">
-                <mat-icon aria-label="Students" class="menu-icon">people</mat-icon> Students
-            </a>
             <a mat-list-item href="#" (click)="changeView($event, 'Users')">
                 <mat-icon aria-label="Users" class="menu-icon">supervisor_account</mat-icon> Users
             </a>
             <mat-divider></mat-divider>
-            <a mat-list-item href="#" (click)="changeView($event, 'Configuration')">
+            <!-- <a mat-list-item href="#" (click)="changeView($event, 'Configuration')">
                 <mat-icon aria-label="System configuration" class="menu-icon">construction</mat-icon> Configuration
-            </a>
+            </a> -->
             <a mat-list-item href="#" (click)="changeView($event, 'User Interfaces')">
                 <mat-icon aria-label="User Interfaces" class="menu-icon">smart_button</mat-icon> User Interfaces
             </a>
@@ -80,7 +77,6 @@
         <div *ngIf="hasAccess" [ngSwitch]="currentView">
             <app-system-dashboard *ngSwitchCase="'Dashboard'" (currentItemChanged)="onItemChanged($event)"></app-system-dashboard>
             <app-robots-list *ngSwitchCase="'Robots'" (currentItemChanged)="onItemChanged($event)"></app-robots-list>
-            <app-students-list *ngSwitchCase="'Students'" (currentItemChanged)="onItemChanged($event)"></app-students-list>
             <app-logs-list *ngSwitchCase="'Logs'" (currentItemChanged)="onItemChanged($event)"></app-logs-list>
             <app-robot-types-list *ngSwitchCase="'Robot Types'" (currentItemChanged)="onItemChanged($event)"></app-robot-types-list>
             <app-users-list *ngSwitchCase="'Users'" (currentItemChanged)="onItemChanged($event)"></app-users-list>
