--- a/Clients/Angular/src/app/components/toolbox-editor/toolbox-editor.component.html
+++ b/Clients/Angular/src/app/components/toolbox-editor/toolbox-editor.component.html
@@ -21,7 +21,12 @@
                     </mat-form-field>
                 </mat-grid-tile>
                 <mat-grid-tile>
-                    <mat-slide-toggle formControlName="isDefault">Default Toobox</mat-slide-toggle>
+                    <div class="option-line">
+                        <mat-slide-toggle formControlName="isDefault">Default Toobox</mat-slide-toggle>
+                    </div>
+                    <div class="option-line">
+                        <mat-slide-toggle formControlName="useEvents">Use Events</mat-slide-toggle>
+                    </div>
                 </mat-grid-tile>
             </mat-grid-list>
         </mat-card-content>
