Fixes to the UI Definition loading: * Always validate the incoming definition, even if ignoring existing * Include the data prefix in the definition instead of the code * Display block images (if available) when viewing a UI definition * Corrected the tangibles definition file

--- a/Clients/Angular/src/app/components/user-interface-editor/user-interface-editor.component.html
+++ b/Clients/Angular/src/app/components/user-interface-editor/user-interface-editor.component.html
@@ -55,6 +55,7 @@
                             </div>
                             <ul *ngIf="item.isOpen">
                                 <li *ngFor="let child of item.children">
+                                    <img *ngIf="child.image" src="{{child.image}}"/>
                                     {{child.name}}
                                 </li>
                             </ul>
