Additional work on robot type log export: * Upgraded to Angular 14 (needed for material-luxon-adapter) * Finished implementing export dialog * Implemented client-side download * Include file extension and MIME type in report format definitions * Added helpers to extract these definitions * Implemented server-side generation * Updated export routing templates to have a consistent layout * Updated controllers to use the helper methods * Deployed latest client

--- a/Clients/Angular/src/app/components/report-settings/report-settings.component.html
+++ b/Clients/Angular/src/app/components/report-settings/report-settings.component.html
@@ -2,7 +2,7 @@
     {{data.title}}
 </h1>
 <div mat-dialog-content>
-    <form [formGroup]="form">
+    <form [formGroup]="form" class="settings-parent">
         <mat-form-field appearance="fill">
             <mat-label>Format</mat-label>
             <mat-select formControlName="format" name="format">
