--- a/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
+++ b/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
@@ -23,6 +23,10 @@
                 <mat-icon aria-label="Users" class="menu-icon">supervisor_account</mat-icon> Users
             </a>
             <mat-divider></mat-divider>
+            <a mat-list-item href="#" (click)="changeView($event, 'Data')">
+                <mat-icon aria-label="System configuration" class="menu-icon">query_stats</mat-icon> Export Data
+            </a>
+            <mat-divider></mat-divider>
             <!-- <a mat-list-item href="#" (click)="changeView($event, 'Configuration')">
                 <mat-icon aria-label="System configuration" class="menu-icon">construction</mat-icon> Configuration
             </a> -->
@@ -82,6 +86,7 @@
             <app-users-list *ngSwitchCase="'Users'" (currentItemChanged)="onItemChanged($event)"></app-users-list>
             <app-system-configuration *ngSwitchCase="'Configuration'" (currentItemChanged)="onItemChanged($event)"></app-system-configuration>
             <app-user-interface-configuration *ngSwitchCase="'User Interfaces'" (currentItemChanged)="onItemChanged($event)"></app-user-interface-configuration>
+            <app-export-data *ngSwitchCase="'Data'"></app-export-data>
             <div *ngSwitchDefault class="unknown-view">
                 <mat-card>
                     <mat-card-title>
