--- a/Clients/Angular/src/app/components/students-list/students-list.component.html
+++ b/Clients/Angular/src/app/components/students-list/students-list.component.html
@@ -49,6 +49,14 @@
                 <th mat-header-cell *matHeaderCellDef> Name </th>
                 <td mat-cell *matCellDef="let record"> {{record.name}} </td>
             </ng-container>
+            <ng-container matColumnDef="gender">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let record"> {{record.gender}} </td>
+            </ng-container>
+            <ng-container matColumnDef="age">
+                <th mat-header-cell *matHeaderCellDef> Age </th>
+                <td mat-cell *matCellDef="let record"> {{record.age}} </td>
+            </ng-container>
             <ng-container matColumnDef="whenAdded">
                 <th mat-header-cell *matHeaderCellDef> When Added </th>
                 <td mat-cell *matCellDef="let record"> {{record.whenAdded | date:'d MMM, y - h:mm:ss a'}} </td>
