--- a/Clients/Angular/src/app/components/report-settings/report-settings.component.html
+++ b/Clients/Angular/src/app/components/report-settings/report-settings.component.html
@@ -12,7 +12,7 @@
             </mat-select>
         </mat-form-field>
 
-        <mat-form-field class="example-form-field" appearance="fill">
+        <mat-form-field class="example-form-field" appearance="fill" *ngIf="data.showDateRange">
             <mat-label>Date Range</mat-label>
             <mat-date-range-input
               [formGroup]="form"
